--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-js-getting-started",
+  "name": "Collaboration Suite",
   "version": "0.3.0",
-  "description": "A sample Node.js app using Express 4",
+  "description": "A Colaboration Suite by WRC",
   "engines": {
     "node": "10.x"
   },
@@ -20,12 +20,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "https://github.com/driverco/collabSuite.git"
   },
   "keywords": [
     "node",
     "heroku",
-    "express"
+    "express",
+    "Collaboration Suite"
   ],
   "license": "MIT"
 }
